--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.6",
     "@types/js-cookie": "^3.0.2",
     "js-cookie": "^3.0.1",
+    "ley": "^0.8.1",
     "next": "13.1.6",
     "patch-package": "^6.5.1",
     "react": "18.2.0",
