Add database table migration coockies

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-PGHOST=\localhost
-PGUSERNAME=next_js_ecommerce_store
-PGPASSWORD=next_js_ecommerce_store
-PGDATABASE=next_js_ecommerce_store
+PGHOST=localhost
+PGUSERNAME=skate_ecommerce
+PGPASSWORD=skate_ecommerce
+PGDATABASE=skate_ecommerce
