--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "migrate": "dotenv ley"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
     "@types/dotenv-safe": "^8.1.2",
     "@types/js-cookie": "^3.0.2",
     "dotenv-cli": "^7.0.0",
