--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "stylelint-config-recommended-scss": "8.0.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.10.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "4.9.4"
   },
   "resolutions": {
