--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "5.49.0",
     "@upleveled/eslint-config-upleveled": "^3.8.0",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
+    "autoprefixer": "^10.4.17",
     "eslint": "8.32.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-import-resolver-typescript": "3.5.3",
@@ -55,8 +56,9 @@
     "eslint-plugin-sonarjs": "0.18.0",
     "eslint-plugin-testing-library": "5.10.0",
     "eslint-plugin-unicorn": "45.0.2",
+    "install": "^0.13.0",
     "libpg-query": "15.0.2",
-    "postcss": "8.4.21",
+    "postcss": "^8.4.35",
     "postcss-scss": "4.0.6",
     "stylelint": "14.16.1",
     "stylelint-config-css-modules": "4.1.0",
